added buffer and test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,11 @@ project(projectAD3 C)
 set(CMAKE_C_STANDARD 17)
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")
+#set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG}")
 set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -g -fsanitize=address")
 set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O3")
+
+include_directories(${PROJECT_SOURCE_DIR}/tests)
 
 add_executable(projectAD3
         src/main.c
@@ -21,4 +24,12 @@ add_executable(projectAD3
 
         src/tree/hu_tucker.c
         src/tree/hu_tucker.h
-        src/tree/linkedList/linkedlist.c src/tree/linkedList/linkedlist.h)
+
+        src/tree/linkedList/linkedlist.c
+        src/tree/linkedList/linkedlist.h
+)
+
+# Add test executable
+add_executable(MyTest
+        src/tests/test_example.c
+)
