--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,7 @@ add_executable(projectAD3
 
         src/IO/bit_input/bit_io.c
         src/IO/bit_input/bit_io.h
-        )
+        src/IO/bit_input.c src/IO/bit_input.h src/extract/prefix_tree.h src/extract/prefix_tree.c src/extract/prefix_node.c src/extract/prefix_node.h src/extract/decoder.c src/extract/decoder.h)
 
 target_link_libraries(projectAD3 m)
 
