--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,8 @@ project(projectAD3 C)
 set(CMAKE_C_STANDARD 17)
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")
-set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG}")
-#set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -g -fsanitize=address")
+#set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG}")
+set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -g -fsanitize=address")
 set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O3")
 
 include_directories(${PROJECT_SOURCE_DIR}/tests)
@@ -36,7 +36,25 @@ add_executable(projectAD3
 
         src/IO/bit_input/bit_io.c
         src/IO/bit_input/bit_io.h
-        src/IO/bit_input.c src/IO/bit_input.h src/extract/prefix_tree.h src/extract/prefix_tree.c src/extract/prefix_node.c src/extract/prefix_node.h src/extract/decoder.c src/extract/decoder.h src/sort/heap_sort.c src/sort/heap_sort.h src/sort/block_merge.c src/sort/block_merge.h)
+
+        src/IO/bit_input.c
+        src/IO/bit_input.h
+
+        src/extract/prefix_tree.h
+        src/extract/prefix_tree.c
+
+        src/extract/prefix_node.c
+        src/extract/prefix_node.h
+
+        src/extract/decoder.c
+        src/extract/decoder.h
+
+        src/sort/heap_sort.c
+        src/sort/heap_sort.h
+
+        src/sort/block_merge.c
+        src/sort/block_merge.h
+        )
 
 target_link_libraries(projectAD3 m)
 
